# microfluidic-netlist

./: .gitignore  Makefile  README.md
backend/: app.py  pyproject.toml  storage.py
backend/routes/: export_bundle.py  extract_graph.py  import_dxf.py  ports.py  select_region.py
core/: README.md  pyproject.toml
core/microfluidic_ir/: __init__.py  branches.py  classify.py  cross_section.py  curve_fit.py  dxf_loader.py  export_debug.py  export_ir.py  export_netlist.py  export_overlay.py  export_segments.py  geometry.py  graph_extract.py  manual_centerline_mode.py  measure.py  pipeline.py  ports.py  schemas.py  skeleton.py  visualize.py
docs/: spec.md  step_d_spec.md
examples/: .gitkeep  README.md  check_enclosed_test_status.py  extract_y_channel_graph.py  generate_y_channel.py  manual_centerlines.json  test_dxf_loader_spec.py  test_load_dxf.py  test_manual_centerline.py  test_select_channels.py  test_skeleton.py  test_visualization.py  test_y_channel_extract.py  test_y_channel_graph.py  y_channel_graph.json  y_channel_scale_manual_centerlines.json
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CanvasRenderer.tsx
frontend/src/pages/: ExportPage.tsx  ImportPage.tsx  LabelPage.tsx  SelectChannelsPage.tsx
frontend/src/state/: store.ts
