[project]
name = "microfluidic-ir"
version = "0.1.0"
description = "Core library for microfluidic DXF to network IR conversion"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.0.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["microfluidic_ir"]

